<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_detikcom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_detikcom" />

    <!-- region image profile -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_detikcom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_detikcom">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_person_24" />
    </androidx.cardview.widget.CardView>

    <!-- endregion image profile -->


    <ImageButton
        android:id="@+id/imb_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/img_detikcom"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/img_detikcom"
        app:srcCompat="@drawable/ic_search" />

    <TextView
        android:id="@+id/txt_terbaru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/terbaru"
        app:layout_constraintEnd_toStartOf="@+id/txt_utama"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detikcom" />

    <TextView
        android:id="@+id/txt_utama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berita_utama"
        app:layout_constraintEnd_toStartOf="@+id/txt_semangat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_terbaru"
        app:layout_constraintTop_toTopOf="@+id/txt_terbaru" />

    <TextView
        android:id="@+id/txt_semangat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/antarkansemangat"
        app:layout_constraintEnd_toStartOf="@+id/txt_popular"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_utama"
        app:layout_constraintTop_toTopOf="@+id/txt_terbaru" />

    <TextView
        android:id="@+id/txt_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostpopular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_semangat"
        app:layout_constraintTop_toTopOf="@+id/txt_terbaru" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:itemTextColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bnv_main"
        app:layout_constraintTop_toBottomOf="@+id/txt_utama"
        tools:layout_editor_absoluteX="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <!-- REGION HEADLINE -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_newsheadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:id="@+id/img_headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/img_news1"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_titleHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_headline"
                        android:textColor="@android:color/white"
                        android:maxLines="2"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txt_descriptionHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Description"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/graywhite"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- REGION HEADLINE -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_daftar_berita"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/row_item"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_newsheadline"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>